5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1575_1560.log
== TEST (2019-03-12 18:32:41) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.???)
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:33:46) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7f567d033730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:35:26) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(lower(string))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower(string))
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:37:08) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string,lower)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string,lower)
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:37:33) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7f2820eef730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:30:12) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."

print(string,lower)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(string,lower)
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:31:39) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."

print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:31:44) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."

print(string.lower())
-- EXECUTION TIME:
0.162353
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
